--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Savate:ital,wght@0,200..900;1,200..900&family=Sevillana&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Pacifico&family=Savate:ital,wght@0,200..900;1,200..900&family=Sevillana&display=swap"
     rel="stylesheet">
 </head>
 
